--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Home</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  Hello world
-  <script src="script.js"></script>
 
+  <a href = "index.html"> home</a>
+<a href = "project1.html"> project1</a>
+<a href = "project2.html"> project2</a>
+  <script src="script.js"></script>
+ <p>Hello it worked</p> 
  <!--
   This script places a badge on your repl's full-browser view back to your repl's cover
   page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
