--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+<h1>Home</h1>
   <a href = "index.html"> home</a>
 <a href = "project1.html"> project1</a>
 <a href = "project2.html"> project2</a>
