--- a/project1.html
+++ b/project1.html
@@ -1,4 +1,4 @@
 <a href = "index.html"> home</a>
 <a href = "project1.html"> project1</a>
 <a href = "project2.html"> project2</a>
-<h1>Projetct 1</h1>
+<h1>project 1</h1>
