--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 </head>
 
 <body>
-<h1>Home</h1>
-  <a href = "index.html"> home</a>
-<a href = "project1.html"> project1</a>
-<a href = "project2.html"> project2</a>
+<h1>Tyler Toner</h1>
+  <ol>
+<li><a href = "unit1/unit1.html"> Unit 1</a></li> 
+ <li><a href = "unit2/unit2.html"> Unit 2</a></li> 
+
+
+</ol>
+
+
+  
   <script src="script.js"></script>
  <p>Hello it worked</p> 
  <!--
