added unit 1 project 1 and unit 2 project 2

--- a/unit1/unit1.html
+++ b/unit1/unit1.html
@@ -1,6 +1,51 @@
-<a href = "index.html"> Home</a>
+
 
 
 
 <h1>Project 1</h1>
+
+
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body> 
+  <h1>Videogames</h1>
+  <title>videogames</title>
+  <h2>Videogames played</h2>
+  <hr></hr>
+
+  <p>A lot of games i like to play are fps and rts games. I have been playing for a long time. Right now i am mainly between two games. Getting ready to Start a third cause of a <i>friend</i>. <br> <b>Escape from Tarkov</b> has been my  main game for the last two years, with over 5000 hours into it. Now i am leaning in to more rts with <i>friends</i>.</p>
+  <p> the Friends i maily play with that have helped threw tuf times</p>
+  <h3>friends</h3>
+<ul>
+  <li>c3</li>
+  <li>tank21cm</li>
+  <li>YaboyFloyd</li>
+</ul>
+  <ol>
+    <li>Escape from tarkov</li>
+    <li>company of heros 2</li>
+    <li>call to arms, is the new one i started, with friends.</li>
+  </ol>
+<h2>Effects and Goals</h2>
+  <p>I really need something else to focus on other than work, computer gaems, and kids. So after everthing happened i decided to try to go back to school and see how that worked out.
+Time management is/and was poor. So now i can focus on school and kids. Alos wish i could learn more about tech to be able to stream properly </p>
+ <!--
+  This script places a badge on your repl's full-browser view back to your repl's cover
+  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
+  teal, blue, blurple, magenta, pink!
+  -->
+  <a href="https://www.escapefromtarkov.com/"> Escape from tarkov</a>
+  <a href="https://www.twitch.tv/shadowsniper56"> My Twitch
+  <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script> 
+</body>
+
+</html>
 
