--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <h1>Tyler Toner</h1>
   <ol>
 <li><a href = "unit1/unit1.html"> Unit 1</a></li> 
- <li><a href = "unit2/unit2.html"> Unit 2</a></li> 
+ <li><a href = "unit2/unit2.html"> Unit 2</a></li>
+    <li><a href = "unit2/unit3.html"> Unit 3</li>
 
+  
 
 </ol>
 
