--- a/unit 3/unit3.html
+++ b/unit 3/unit3.html
@@ -50,6 +50,8 @@
   teal, blue, blurple, magenta, pink!
   -->
   <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script> 
+
+    <footer>&copy <i> 2023 Tyler Toner</i> </footer>
 </body>
 
 </html>
