--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <ol>
 <li><a href = "unit1/unit1.html"> Unit 1</a></li> 
  <li><a href = "unit2/unit2.html"> Unit 2</a></li>
-    <li><a href = "unit2/unit3.html"> Unit 3</li>
+    <li><a href = "unit2/unit3.html"> Unit 3</a></li>
+    <li><a href ="Unit4/unit4.html"> unit 4</a></li>
 
   
 
